// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticContentDetailsViewTest handle null content page component 1`] = `
"<div className=\\"static-content-details-view\\">
  <h1>
    my test title
  </h1>
  <VisualizationToggle checked={true} onClick={[Function: proxy]} label=\\"my test toggle label\\" className=\\"details-view-toggle\\" visualizationName=\\"my test title\\" />
  <ContentInclude deps={[undefined]} content={{...}} />
</div>"
`;

exports[`StaticContentDetailsViewTest render content page component 1`] = `
"<div className=\\"static-content-details-view\\">
  <h1>
    my test title
  </h1>
  <VisualizationToggle checked={true} onClick={[Function: proxy]} label=\\"my test toggle label\\" className=\\"details-view-toggle\\" visualizationName=\\"my test title\\" />
  <ContentInclude deps={[undefined]} content={[function]} />
</div>"
`;
